<resources>
    <string name="app_name">Donation 5.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">DONATE</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="menuReport">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="menuReset">Reset</string>
    <string name="amount">Amount</string>
    <string name="totalSoFar">Total so Far</string>
    <string name="total">$ Total</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="defaultUpvotes">00</string>
    <string name="method">Method</string>
    <string name="upvotes">Upvotes</string>
</resources>