<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report">
    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/reportTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTask"
        android:layout_below="@+id/reportTitle"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleUpvotes"
            android:text="@string/upvotes"
            android:layout_marginEnd="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleAmount"
            android:text="@string/amount"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleMethod"
            android:text="@string/method"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/report_swipe_refresh_layout"
        android:layout_below="@id/titleTask"
        android:layout_marginTop="10dp">
        <ListView
            android:id="@+id/reportList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>